server side form validation

--- a/html source/about.html
+++ b/html source/about.html
@@ -6,21 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bread And Breackfast</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <style>
-        .my-footer {
-            height: 4em;
-            background-color:black;
-            margin-top: 1.5em;
-            padding: 1em;
-            color: white;
-            font-size: 80%;
-        }
-        p {
-
-        }
-
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 
 </head>
 <body>
@@ -72,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-center mt-4">Welcome To Reservation Pages </h1>
+                    <h1 class="text-center mt-4">Welcome To About</h1>
                 </div>
             </div>
 
