final setups ie added content in about page & contact page and do some modification

--- a/html source/about.html
+++ b/html source/about.html
@@ -57,32 +57,49 @@
 
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center mt-4">Welcome To About</h1>
-                </div>
+      <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="text mt-4">About To Roomie</h1>
+                <hr>
+                <p>
+                    <img class="float-left img-fluid" src="/html source/static/images/about.jpg" alt="About Roomie" style="inline-size: 40%; flex-flow: row; float: right;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+    
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi eum, nesciunt odit ipsum cumque beatae 
+                    quis quibusdam eveniet totam asperiores architecto,earum nulla facilis illo. Eius repellat eligendi aut.</p>
             </div>
+        </div>
+    </div>
 
 
-
-         </div>
-
-
-         <div class="row my-footer">
-             <div class="col">
-                 Left
-             </div>
-
-             <div class="col">
-                 Middle
-             </div>
-
-             <div class="col">
-                 Right
-             </div>
-
-         </div>
+         <footer class="static-bottom bg-light text-center text-lg-start">
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright:
+            <a class="text-dark" href="/">Roomie</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
 
 
 
