--- a/html source/reservation.html
+++ b/html source/reservation.html
@@ -92,20 +92,14 @@
          </div>
 
 
-              <div class="row my-footer">
-                  <div class="col">
-                      Left
-                  </div>
-
-                  <div class="col">
-                      Middle
-                  </div>
-
-                  <div class="col">
-                      Right
-                  </div>
-
-              </div>
+         <footer class="static-bottom bg-light text-center text-lg-start">
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright:
+            <a class="text-dark" href="/">Roomie</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
 
 
 
