--- a/html source/index.html
+++ b/html source/index.html
@@ -60,24 +60,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="static/images/woman-laptop.png" class="d-block w-100" alt="women with laptop">
+            <img src="static/images/outside.png" class="d-block w-100" alt="women with laptop">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Home is where our story begins…</h5>
+              <p>A house is made of bricks and beams. A home is made of hopes and dreams.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="static/images/tray.png" class="d-block w-100" alt="food tray">
+            <img src="static/images/tray.jpg" class="d-block w-100" alt="food tray">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Coffee is a emotions</h5>
+              <p>Coffee is a beverage that puts one to sleep when not drank..</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="static/images/outside.png" class="d-block w-100" alt="house">
+            <img src="static/images/woman-laptop.jpg" class="d-block w-100" alt="house">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>We are once again at the start of a workweek.</h5>
+              <p>Whether you think you can, or you think you can’t – you’re right</p>
             </div>
           </div>
         </div>
@@ -97,11 +97,25 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-center mt-4">Welcome To Roomie</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse reiciendis necessitatibus, distinctio inventore illum totam harum dolore facilis rerum adipisci modi a possimus repellendus debitis ab excepturi veritatis incidunt tenetur similique? Voluptatibus nostrum molestias quas et reprehenderit! Magni perferendis minima enim laudantium voluptate illum, voluptatem, perspiciatis quas provident vero neque mollitia similique expedita possimus recusandae? Perferendis laborum voluptas iure aliquid repudiandae, quibusdam id deserunt cum accusantium nulla consectetur similique voluptatibus officiis, alias omnis dolor maiores nemo libero at deleniti possimus labore vel quod! Aliquid necessitatibus nostrum assumenda voluptas corrupti repellat, velit ad porro deleniti nulla veniam impedit! Odio quam id deserunt et eligendi similique, quasi numquam perferendis voluptatem laboriosam rerum officia dignissimos. Voluptas amet, debitis maiores facere doloremque harum obcaecati consectetur nemo temporibus deserunt quisquam maxime accusantium atque exercitationem, fugit ratione delectus dolor voluptatum? Expedita ad rem ex laborum sunt nam sapiente eius consectetur sint? Labore fugiat odit voluptas, earum dolore voluptates cupiditate velit nihil vero voluptatum debitis non, deleniti, natus facere laboriosam? Fuga odit praesentium ea quasi laborum deleniti dolor sunt, eaque quae fugit exercitationem, ratione mollitia iure? Illo ea velit culpa, atque maxime officiis asperiores itaque voluptatem error provident facere tenetur quos voluptatibus enim, aspernatur explicabo doloribus, expedita aliquid repellat ducimus qui. Et ducimus ipsam animi optio, sint assumenda in nobis cum, quam expedita nam odio voluptatem magnam dignissimos nesciunt, omnis pariatur veniam consectetur sunt. Quos eaque itaque odit ipsum animi, iure minus delectus reprehenderit natus asperiores, magnam quam repudiandae? Quaerat, deserunt. Unde amet tempore in rem, sit perferendis sequi ab facilis, distinctio quasi repellendus eaque dicta dolore quae. Atque modi beatae unde. Animi officia nostrum inventore, dolore quidem enim iure iusto expedita perferendis accusamus earum culpa quo rem blanditiis, error dignissimos obcaecati magni fuga illum aliquid odit, debitis praesentium voluptas fugiat. Doloribus corporis eum quo voluptatem.</p>
+                    <h1 class="text-center mt-4">Welcome To Roomie</h1> <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse reiciendis necessitatibus, distinctio inventore
+                       illum totam harum dolore facilis rerum adipisci modi a possimus repellendus debitis ab excepturi 
+                       veritatis incidunt tenetur similique? Voluptatibus nostrum molestias quas et reprehenderit! Magni 
+                       perferendis minima enim laudantium voluptate illum, voluptatem, perspiciatis quas provident vero neque
+                        mollitia similique expedita possimus recusandae? Perferendis laborum voluptas iure aliquid repudiandae, 
+                        quibusdam id deserunt cum accusantium nulla consectetur similique voluptatibus officiis, alias omnis dolor 
+                        maiores nemo libero at deleniti possimus labore vel quod! Aliquid necessitatibus nostrum assumenda voluptas
+                         corrupti repellat, velit ad porro deleniti nulla veniam impedit! Odio quam id deserunt et eligendi similique, 
+                         quasi numquam perferendis voluptatem laboriosam rerum officia dignissimos. Voluptas amet, debitis maiores facere
+                         doloremque harum obcaecati consectetur nemo temporibus deserunt quisquam maxime accusantium atque exercitationem,
+                          fugit ratione delectus dolor voluptatum? Expedita ad rem ex laborum sunt nam sapiente eius consectetur sint? Labore
+                          fugiat  odit voluptas, earum dolore voluptates cupiditate velit nihil vero voluptatum debitis non, deleniti, natus
+                           facere laboriosam? Fuga odit praesentium ea quasi laborum deleniti dolor sunt, eaque quae fugit exercitationem,
+                            ratione mollitia iure? Illo ea velit culpa, atque maxime officiis asperiores itaque voluptatem error provident 
+                            </p>
                 </div>
             </div>
-
+            <hr>
 
 
             <div class="row">
@@ -113,20 +127,14 @@
          </div>
 
 
-         <div class="row my-footer">
-             <div class="col">
-                 Left
-             </div>
-
-             <div class="col">
-                 Middle
-             </div>
-
-             <div class="col">
-                 Right
-             </div>
-
-         </div>
+         <footer class="static-bottom bg-light text-center text-lg-start">
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright:
+            <a class="text-dark" href="/">Roomie</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
 
 
 
